packages/astro/e2e/fixtures/errors/src/pages/vue-syntax-error.astro
---
import VueSyntaxError from '../components/vue/VueSyntaxError.vue';
---

<div>
  <VueSyntaxError />
</div>
